brining the clojure micro service project up to date with the latest versions of the dependent components and services